# mini-crm-leads

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  docker-entrypoint.sh  pyproject.toml
migrations/: env.py
migrations/versions/: 92fab9b226da_initial.py
src/: main.py
src/api/: base.py
src/api/v1/: __init__.py  contacts.py  leads.py  operators.py  sources.py
src/core/: base_model.py  base_repository.py  config.py  database.py  exceptions.py  lifespan.py  middleware.py  schemas.py
src/domains/contacts/: dependencies.py  model.py  repository.py  schemas.py  service.py
src/domains/leads/: dependencies.py  model.py  repository.py  schemas.py  service.py
src/domains/operators/: dependencies.py  model.py  repository.py  schemas.py  service.py
src/domains/sources/: dependencies.py  model.py  repository.py  schemas.py  service.py
src/utils/: logger.py
tests/: README.md  __init__.py  conftest.py
tests/test_api/: __init__.py  test_base.py  test_contacts.py  test_leads.py  test_operators.py  test_sources.py
