[project]
name = "mini-crm-leads"
version = "0.1.0"
description = "Mini CRM для распределения лидов между операторами"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "alembic>=1.13.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.6",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "aiosqlite>=0.19.0",
]
